# LDGuid

./: README.md
AERNet/: train_levir.sh  train_levir_latent.sh  train_svcd.sh  train_svcd_latent.sh  train_whu.sh  train_whu_latent.sh
BIT_CD/: benchmark.sh  benchmark_seed.sh  fire_benchmark.sh  fire_latent.sh  run_LEVIR_cd.sh  run_WHU.sh
wildfire-segmentation/: .gitignore  .pre-commit-config.yaml  README.md  joint_train.sh  pyproject.toml  requirements.txt  train_ae_sweep.sh  train_aesweep_array.sh  train_cabuar_aesweep.sh  train_cabuar_ldg.sh  train_levir_benchmark.sh  train_levir_latent.sh  train_oscd.sh  train_reversed_ae.sh  train_svcd_benchmark.sh  train_svcd_latent.sh  train_whu_benchmark.sh  train_whu_latent.sh
wildfire-segmentation/notebooks/: Dataset_Example.ipynb
wildfire-segmentation/src/model/: reversed_autoencoder.py
wildfire-segmentation/src/train/: train_ae_reversed.py
